--- a/package.json
+++ b/package.json
@@ -11,6 +11,10 @@
   "license": "ISC",
   "dependencies": {
     "dotenv": "^10.0.0",
-    "express": "^4.17.2"
+    "express": "^4.17.2",
+    "express-react-views": "^0.11.0",
+    "method-override": "^3.0.0",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2"
   }
 }
